put .board-row:after selector back, it prevents the board from getting squished to non 3x3

--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,23 @@
 :root {
+    --font-size: 24px;
     --square-size: calc(min(100vw, 100vh) * 0.2);
     --square-border: 1.5px;
 }
 
 body {
-    font: 14px "Century Gothic", Futura, sans-serif;
+    font: var(--font-size) monospace, sans-serif;
     margin: 20px;
 }
 
-ol,
-ul {
-    padding-left: 30px;
+ul,
+ol {
+    padding-left: calc(var(--font-size) * 2);
+}
+
+.board-row:after {
+  clear: both;
+  content: "";
+  display: table;
 }
 
 .status {
@@ -44,4 +51,15 @@ ul {
 
 .game-info {
     margin-left: 20px;
+}
+
+@media (max-width: 620px) {
+    .game {
+        flex-direction: column;
+    }
+
+    .game-info {
+        margin-left: 0;
+        margin-top: 20px;
+    }
 }
